--- a/dokumentumok.html
+++ b/dokumentumok.html
@@ -382,6 +382,68 @@
             color: #4a7bc8;
         }
 
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+            animation: fadeIn 0.5s;
+            padding-top: 60px;
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 1200px;
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            position: relative;
+        }
+
+        .modal-content h2 {
+            color: #2c5aa0;
+            margin-bottom: 20px;
+        }
+
+        .modal-gallery-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+        }
+
+        .modal-gallery-grid img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #fff;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+            cursor: pointer;
+        }
+
+        .close-btn:hover,
+        .close-btn:focus {
+            color: #bbb;
+            text-decoration: none;
+        }
+
         @media (max-width: 768px) {
             .header-content {
                 text-align: center;
@@ -411,6 +473,10 @@
                 border: 1px solid #ddd;
                 margin-top: 10px;
                 border-radius: 5px;
+            }
+
+            .modal-content {
+                width: 90%;
             }
         }
     </style>
@@ -508,61 +574,60 @@
                 </div>
             </div>
 
-            <!-- Photos Section -->
             <div class="photos-section">
                 <h2>📸 Galéria</h2>
                 <p>Tekintse meg iskolánk életének pillanatait</p>
                 <div class="photos-grid">
-                    <div class="photo-item">
+                    <div class="photo-item" data-album="Iskolánk épülete" data-folder="iskolaepulet">
                         <div class="photo-placeholder">🏫</div>
                         <div class="photo-caption">
                             <h4>Iskolánk épülete</h4>
                             <p>A főépület külső látképe</p>
                         </div>
                     </div>
-                    <div class="photo-item">
+                    <div class="photo-item" data-album="Tanórák" data-folder="tanorak">
                         <div class="photo-placeholder">👨‍🏫</div>
                         <div class="photo-caption">
                             <h4>Tanórák</h4>
                             <p>Diákok és tanárok a munkában</p>
                         </div>
                     </div>
-                    <div class="photo-item">
+                    <div class="photo-item" data-album="Kreatív tevékenységek" data-folder="kreativ">
                         <div class="photo-placeholder">🎨</div>
                         <div class="photo-caption">
                             <h4>Kreatív tevékenységek</h4>
                             <p>Művészeti és kézműves foglalkozások</p>
                         </div>
                     </div>
-                    <div class="photo-item">
+                    <div class="photo-item" data-album="Iskolakert" data-folder="iskolakert">
                         <div class="photo-placeholder">🌳</div>
                         <div class="photo-caption">
                             <h4>Iskolakert</h4>
                             <p>Természetben végzett tevékenységek</p>
                         </div>
                     </div>
-                    <div class="photo-item">
+                    <div class="photo-item" data-album="Ünnepségek" data-folder="unnepek">
                         <div class="photo-placeholder">🎉</div>
                         <div class="photo-caption">
                             <h4>Ünnepségek</h4>
                             <p>Iskolai rendezvények és ünnepek</p>
                         </div>
                     </div>
-                    <div class="photo-item">
+                    <div class="photo-item" data-album="Könyvtár" data-folder="konyvtar">
                         <div class="photo-placeholder">📚</div>
                         <div class="photo-caption">
                             <h4>Könyvtár</h4>
                             <p>Olvasási és tanulási környezet</p>
                         </div>
                     </div>
-                    <div class="photo-item">
+                    <div class="photo-item" data-album="Sport és mozgás" data-folder="sport">
                         <div class="photo-placeholder">⚽</div>
                         <div class="photo-caption">
                             <h4>Sport és mozgás</h4>
                             <p>Testnevelés és szabadidős tevékenységek</p>
                         </div>
                     </div>
-                    <div class="photo-item">
+                    <div class="photo-item" data-album="Étkeztetés" data-folder="etkezes">
                         <div class="photo-placeholder">🍽️</div>
                         <div class="photo-caption">
                             <h4>Étkeztetés</h4>
@@ -622,6 +687,15 @@
         </div>
     </footer>
 
+    <div id="photo-modal" class="modal">
+        <span class="close-btn">&times;</span>
+        <div class="modal-content">
+            <h2 id="modal-title"></h2>
+            <div id="modal-gallery-grid" class="modal-gallery-grid">
+                </div>
+        </div>
+    </div>
+
     <script>
         // Add a simple header shadow effect when scrolling
         window.addEventListener('scroll', function() {
@@ -633,7 +707,7 @@
             }
         });
 
-        // Dropdown functionality
+        // Dropdown functionality for documents
         function toggleDropdown(button) {
             const dropdown = button.parentElement;
             const documentItem = dropdown.closest('.document-item');
@@ -673,12 +747,61 @@
             }
         });
 
-        // Photo gallery functionality (placeholder for future development)
-        document.querySelectorAll('.photo-item').forEach(item => {
+        // Modal/Lightbox functionality for the photo gallery
+        const modal = document.getElementById('photo-modal');
+        const modalTitle = document.getElementById('modal-title');
+        const galleryGrid = document.getElementById('modal-gallery-grid');
+        const closeBtn = document.querySelector('.close-btn');
+        const photoItems = document.querySelectorAll('.photo-item');
+        
+        // Define your image data for each album here
+        const photoAlbums = {
+            'iskolaepulet': 20, // Example: 20 images in the iskoalepulet folder
+            'tanorak': 15,
+            'kreativ': 18,
+            'iskolakert': 12,
+            'unnepek': 25,
+            'konyvtar': 10,
+            'sport': 17,
+            'etkezes': 11
+        };
+
+        photoItems.forEach(item => {
             item.addEventListener('click', function() {
-                // Placeholder for photo modal or lightbox functionality
-                console.log('Photo clicked:', this.querySelector('h4').textContent);
+                const albumName = this.dataset.album;
+                const folderName = this.dataset.folder;
+                const imageCount = photoAlbums[folderName];
+
+                if (!imageCount) {
+                    // Handle case where album is not defined
+                    console.error('Album not found in photoAlbums data.');
+                    return;
+                }
+                
+                modalTitle.textContent = albumName;
+                galleryGrid.innerHTML = ''; // Clear previous images
+
+                for (let i = 1; i <= imageCount; i++) {
+                    const img = document.createElement('img');
+                    // Assumes a naming convention like 'albumname_01.jpg', 'albumname_02.jpg', etc.
+                    const imagePath = `galeria/${folderName}/${folderName}_${String(i).padStart(2, '0')}.jpg`;
+                    img.src = imagePath;
+                    img.alt = `${albumName} ${i}. kép`;
+                    galleryGrid.appendChild(img);
+                }
+
+                modal.style.display = 'block';
             });
+        });
+
+        closeBtn.addEventListener('click', () => {
+            modal.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
         });
     </script>
 </body>
