contact hover anim

--- a/osztalyok.html
+++ b/osztalyok.html
@@ -65,6 +65,11 @@
             border-left: 5px solid #4a7bc8;
         }
 
+         .info-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        }
+
         .info-card h3 {
             color: #2c5aa0;
             margin-bottom: 15px;
