--- a/osztalyok.html
+++ b/osztalyok.html
@@ -63,6 +63,7 @@
             border-radius: 10px;
             text-align: center;
             border-left: 5px solid #4a7bc8;
+             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
          .info-card:hover {
