fixed names bar

--- a/osztalyok.html
+++ b/osztalyok.html
@@ -414,10 +414,9 @@
                         <p><strong>Életkor:</strong> 3-6 év</p>
                         <p><strong>Gyermekek száma:</strong> 12</p>
                         <p><strong>Óvodapedagógusok:</strong> Rancz Ildikó</p>
-                        <p><strong>Névsor:</strong></p>
                         <div class="nevsor-dropdown">
                             <div class="dropdown-btn" onclick="toggleDropdown(this)">
-                               <strong> Gyermekek nevei (12 fő)</strong>
+                               <strong>Névsor:</strong>
                                 <span class="dropdown-arrow">▼</span>
                             </div>
                             <div class="dropdown-content">
@@ -448,10 +447,9 @@
                         <p><strong>Életkor:</strong> 6-7 év</p>
                         <p><strong>Tanulók száma:</strong> 9</p>
                         <p><strong>Tanítónő: </strong>Kiss Tünde-Ibolya</p>
-                        <p><strong>Névsor:</strong></p>
                         <div class="nevsor-dropdown">
                             <div class="dropdown-btn" onclick="toggleDropdown(this)">
-                               <strong> Tanulók nevei (9 fő) </strong>
+                                <strong>Névsor:</strong>
                                 <span class="dropdown-arrow">▼</span>
                             </div>
                             <div class="dropdown-content">
@@ -479,10 +477,9 @@
                         <p><strong>Életkor:</strong> 7-8 év</p>
                         <p><strong>Tanulók száma:</strong> 9</p>
                         <p><strong>Tanítónő:</strong> Nagy Adél</p>
-                        <p><strong>Névsor:</strong></p>
                         <div class="nevsor-dropdown">
                             <div class="dropdown-btn" onclick="toggleDropdown(this)">
-                                <strong> Tanulók nevei (9 fő) </strong>
+                                <strong>Névsor:</strong>
                                 <span class="dropdown-arrow">▼</span>
                             </div>
                             <div class="dropdown-content">
@@ -510,10 +507,10 @@
                         <p><strong>Életkor:</strong> 9-10 év</p>
                         <p><strong>Tanulók száma:</strong> 9</p>
                         <p><strong>Tanítónő:</strong> Kovács Ilona-Éva </p>
-                        <p><strong>Névsor:</strong></p>
+                        
                         <div class="nevsor-dropdown">
                             <div class="dropdown-btn" onclick="toggleDropdown(this)">
-                                <strong> Tanulók nevei (9 fő) </strong>
+                                <strong>Névsor:</strong>
                                 <span class="dropdown-arrow">▼</span>
                             </div>
                             <div class="dropdown-content">
