docs organization change in infortmations

--- a/dokumentumok.html
+++ b/dokumentumok.html
@@ -250,6 +250,14 @@
             margin-bottom: 40px;
         }
 
+        .photos-section h2 {
+            color: #2c5aa0;
+            margin-bottom: 30px;
+            font-size: 28px;
+            border-bottom: 3px solid #4a7bc8;
+            padding-bottom: 10px;
+        }
+
         .photos-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -654,7 +662,7 @@
                         <span class="document-icon">📅</span>
                         <h4>Tanévi Naptár</h4>
                         <p>A 2025-2026-ós tanév programja</p>
-                        <a href="Structura anului scolar 2025_26 judetul Covasna_0.pdf" class="btn">PDF Letöltés</a>
+                        <a href="dokumentum/Structura anului scolar 2025_26 judetul Covasna_0.pdf" class="btn">PDF Letöltés</a>
                     </div>
                     <div class="document-item">
                         <span class="document-icon">🏥</span>
@@ -663,11 +671,11 @@
                         <div class="dropdown">
                             <button class="btn dropdown-btn" onclick="toggleDropdown(this)">Bursa Dokumentumok ▼</button>
                             <div class="dropdown-content">
-                                <a href="bursa sociala medicala.docx">Bursa medicala</a>
-                                <a href="bursa sociala orfani.docx">Bursa orfani</a>
-                                <a href="bursa sociala venit mic.docx">Bursa sociala venit mic</a>
-                                <a href="Model-DECLARATIE-PE-PROPRIA-RASPUNDERE.docx">Declaratie</a>
-                                <a href="DECLARATIE-VENITURI.docx">Declaratie venituri</a>
+                                <a href="dokumentum/bursa sociala medicala.docx">Bursa medicala</a>
+                                <a href="dokumentum/bursa sociala orfani.docx">Bursa orfani</a>
+                                <a href="dokumentum/bursa sociala venit mic.docx">Bursa sociala venit mic</a>
+                                <a href="dokumentum/Model-DECLARATIE-PE-PROPRIA-RASPUNDERE.docx">Declaratie</a>
+                                <a href="dokumentum/DECLARATIE-VENITURI.docx">Declaratie venituri</a>
                             </div>
                         </div>
                     </div>
@@ -675,13 +683,13 @@
                         <span class="document-icon">💰</span>
                         <h4>Tanszercsomag-támogatás</h4>
                         <p>Rechizite (15 sept.)</p>
-                        <a href="Cerere-rechizite-scolare-gratuite-an-scolar-2025-2026.docx" class="btn">PDF Letöltés</a>
+                        <a href="dokumentum/Cerere-rechizite-scolare-gratuite-an-scolar-2025-2026.docx" class="btn">PDF Letöltés</a>
                     </div>
                     <div class="document-item">
                         <span class="document-icon">💰</span>
                         <h4>Oktatási utalvány</h4>
                         <p>Tichet educațional (29 sept. - 2 oct.)</p>
-                        <a href="Cerere-tichete-sociale 2025.docx" class="btn">PDF Letöltés</a>
+                        <a href="dokumentum/Cerere-tichete-sociale 2025.docx" class="btn">PDF Letöltés</a>
                     </div>
                     <div class="document-item">
                         <span class="document-icon">📚</span>
