--- a/index.html
+++ b/index.html
@@ -216,25 +216,25 @@
         <div class="container">
             <section class="section">
                 <h2>Rólunk</h2>
-                <p>Iskolánk egy kis és barátságos intézmény, 28 tanulóval, 12 óvodással, akik óvodai és három általános iskolai osztályba vannak elosztva. Hiszünk a személyre szabott tanulásban és minden gyermek fejlesztésében, egy meleg és biztonságos környezetben.</p>
+                <p>Iskolánk egy kis és barátságos intézmény, 29 tanulóval, 14 óvodással, akik óvodai és három általános iskolai osztályba vannak elosztva. Hiszünk a személyre szabott tanulásban és minden gyermek fejlesztésében, egy meleg és biztonságos környezetben.</p>
                 <p>Elkötelezett pedagóguscsapatunk szorosan együttműködik minden családdal, hogy biztosítsuk a gyermekek tanulmányi és érzelmi sikerét.</p>
                 
                 <div class="quick-info">
                     <div class="info-card">
-                        <h3>🌼 40 Gyermek</h3>
+                        <h3>🌼 43 Gyermek</h3>
                         <p>Óvodások és általános iskolások egy családias környezetben</p>
-                    </div>
-                    <div class="info-card">
-                        <h3>👩‍🏫 4+4 Pedagógus</h3>
-                        <p>Tapasztalt és elkötelezett tanárok</p>
                     </div>
                     <div class="info-card">
                         <h3>🏫 1 vegyes óvodai csoport <br> 3 osztály</h3>
                         <p>Óvodai csoport<br> Előkészítő-I. osztály <br> II-III. osztály <br> IV. osztály</p>
                     </div>
                     <div class="info-card">
-                        <h3>❤️ Személyre szabott</h3>
-                        <p>Minden gyermek egyedi fejlesztési programja</p>
+                        <h3>👩‍🏫 4+4 Pedagógus</h3>
+                        <p>Tapasztalt és elkötelezett tanárok</p>
+                        <p><strong>Bardocz Szilárd-Zsolt - Testnevelés szakos tanár</strong></p>
+                        <p><strong>Hadnagy Béla - Angol nyelv szakos tanár</strong></p>
+                        <p><strong>Micle-Csog Karola-Éva - Vallás szakos tanár</strong></p>
+                        <p><strong>Vajda Augusta-Ildikó - Testnevelés szakos tanár</strong></p>
                     </div>
                 </div>
             </section>
@@ -249,19 +249,12 @@
                         <p>igazgato@iskolank.hu</p>
                     </div>
                     <div class="info-card">
-                        <h4>📞 Telefon</h4>
-                        <p>+36 30 123 4567</p>
-                        <p>+36 20 987 6543</p>
-                    </div>
-                    <div class="info-card">
                         <h4>📍 Cím</h4>
-                        <p>Tanulás utca 12.</p>
-                        <p>Városaink, Megye</p>
+                        <p>Fő út 194</p>
+                        <p>Köpec, Kovászna megye, 525103</p>
                     </div>
                     <div class="info-card">
-                        <h4>🕒 Nyitvatartás</h4>
-                        <p>Hétfő - Péntek: 8:00 - 17:00</p>
-                        <p>Titkárság: 8:00 - 16:00</p>
+                        <h4>🕒 Fogadóóra</h4>
                     </div>
                 </div>
             </section>
@@ -281,7 +274,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Közösségünk</h4>
-                    <p>40 boldog gyermek, 8 elkötelezett pedagógus, részt vevő családok és egy egyesített közösség az oktatásért.</p>
+                    <p>43 boldog gyermek, 8 elkötelezett pedagógus, részt vevő családok és egy egyesített közösség az oktatásért.</p>
                 </div>
             </div>
             <p>&copy; 2025 Iskolánk. Minden jog fenntartva. | Szeretettel tervezve gyermekeinknek.</p>
