--- a/osztalyok.html
+++ b/osztalyok.html
@@ -563,7 +563,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+         <div class="container">
          <section id="kapcsolat" class="section">
                 <h2>Kapcsolat</h2>
                 <div class="quick-info">
@@ -573,19 +573,12 @@
                         <p>igazgato@iskolank.hu</p>
                     </div>
                     <div class="info-card">
-                        <h4>📞 Telefon</h4>
-                        <p>+36 30 123 4567</p>
-                        <p>+36 20 987 6543</p>
-                    </div>
-                    <div class="info-card">
                         <h4>📍 Cím</h4>
-                        <p>Tanulás utca 12.</p>
-                        <p>Városaink, Megye</p>
+                        <p>Fő út 194</p>
+                        <p>Köpec, Kovászna megye, 525103</p>
                     </div>
                     <div class="info-card">
-                        <h4>🕒 Nyitvatartás</h4>
-                        <p>Hétfő - Péntek: 8:00 - 17:00</p>
-                        <p>Titkárság: 8:00 - 16:00</p>
+                        <h2>🕒 Fogadóóra</h2>
                     </div>
                 </div>
             </section>
