--- a/dokumentumok.html
+++ b/dokumentumok.html
@@ -640,7 +640,7 @@
 
             <div class="notice">
                 <h3>📢 Fontos Információ</h3>
-                <p>A 2025-2026-os tanévre a beiratkozási időszak <strong>március 1-15.</strong> között lesz. Kérjük, töltse le és töltse ki az alábbi dokumentumokat időben!</p>
+                <p>Kérjük, töltse le és töltse ki az alábbi dokumentumokat időben!</p>
             </div>
 
             <div class="documents-section">
