index ui change

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             background-repeat:no-repeat;
             background-position: center;
             color: rgb(237, 6, 25);
-            text-align: center;
-            padding: 80px 0;
-        }
+            text-align: left;
+            padding: 80px;
+            }
 
         .hero h1 {
             font-size: 48px;
@@ -208,7 +208,7 @@
     <div class="hero">
         <div class="container">
             <h1>Üdvözöljük Iskolánkban</h1>
-            <p>Egy kis közösség, ahol minden gyermek számít</p>
+            <h2>Egy kis közösség, ahol minden gyermek számít</h2>
         </div>
     </div>
 
@@ -230,11 +230,10 @@
                     </div>
                     <div class="info-card">
                         <h3>👩‍🏫 4+4 Pedagógus</h3>
-                        <p>Tapasztalt és elkötelezett tanárok</p>
-                        <p><strong>Bardocz Szilárd-Zsolt - Testnevelés szakos tanár</strong></p>
-                        <p><strong>Hadnagy Béla - Angol nyelv szakos tanár</strong></p>
-                        <p><strong>Micle-Csog Karola-Éva - Vallás szakos tanár</strong></p>
-                        <p><strong>Vajda Augusta-Ildikó - Testnevelés szakos tanár</strong></p>
+                        <p><strong>• Bardocz Szilárd-Zsolt </strong><br> Testnevelés szakos tanár</p>
+                        <p><strong>• Hadnagy Béla </strong><br> Angol nyelv szakos tanár</p>
+                        <p><strong>• Micle-Csog Karola-Éva </strong><br> Vallás szakos tanár</p>
+                        <p><strong>• Vajda Augusta-Ildikó </strong><br> Testnevelés szakos tanár</p>
                     </div>
                 </div>
             </section>
