--- a/osztalyok.html
+++ b/osztalyok.html
@@ -412,7 +412,7 @@
                     <h3>Óvoda</h3>
                     <div class="class-info">
                         <p><strong>Életkor:</strong> 3-6 év</p>
-                        <p><strong>Gyermekek száma:</strong> 14</p>
+                        <p><strong>Gyermekek száma:</strong> 13</p>
                         <p><strong>Óvodapedagógusok:</strong> Rancz Ildikó</p>
                         <div class="nevsor-dropdown">
                             <div class="dropdown-btn" onclick="toggleDropdown(this)">
@@ -420,20 +420,22 @@
                                 <span class="dropdown-arrow">▼</span>
                             </div>
                             <div class="dropdown-content">
-                                <div class="dropdown-item">1. Tanuló</div>
-                                <div class="dropdown-item">2. Tanuló</div>
-                                <div class="dropdown-item">3. Tanuló</div>
-                                <div class="dropdown-item">4. Tanuló</div>
-                                <div class="dropdown-item">5. Tanuló</div>
-                                <div class="dropdown-item">6. Tanuló</div>
-                                <div class="dropdown-item">7. Tanuló</div>
-                                <div class="dropdown-item">8. Tanuló</div>
-                                <div class="dropdown-item">9. Tanuló</div>
-                                <div class="dropdown-item">10. Tanuló</div>
-                                <div class="dropdown-item">11. Tanuló</div>
-                                <div class="dropdown-item">12. Tanuló</div>
-                                <div class="dropdown-item">13. Tanuló</div>
-                                <div class="dropdown-item">14. Tanuló</div>
+                                <div class="dropdown-item"><strong>Kiscsoport</strong></div>
+                                <div class="dropdown-item">Szász Angella</div>
+                                <div class="dropdown-item">Téglás Eszter-Beáta</div>
+                                <div class="dropdown-item">Veres Boróka</div>
+                                <div class="dropdown-item"><strong>Középső csoport</strong></div>
+                                <div class="dropdown-item">Bocz Sámuel</div>
+                                <div class="dropdown-item">Csíki Abigél</div>
+                                <div class="dropdown-item">Kusztos Tamás</div>
+                                <div class="dropdown-item">Tompos Andrea</div>
+                                <div class="dropdown-item"><strong>Nagycsoport</strong></div>
+                                <div class="dropdown-item">Barabás Karola</div>
+                                <div class="dropdown-item">Bedő János Zsolt</div>
+                                <div class="dropdown-item">Ghironte Patrick</div>
+                                <div class="dropdown-item">Kolumbán Magor-Attila</div>
+                                <div class="dropdown-item">Téglás Dávid-Bence</div>
+                                <div class="dropdown-item">Veres Kamilla</div>
                             </div>
                         </div>
                     </div>
@@ -455,14 +457,16 @@
                                 <span class="dropdown-arrow">▼</span>
                             </div>
                             <div class="dropdown-content">
-                                <div class="dropdown-item">1. Tanuló</div>
-                                <div class="dropdown-item">2. Tanuló</div>
-                                <div class="dropdown-item">3. Tanuló</div>
-                                <div class="dropdown-item">4. Tanuló</div>
-                                <div class="dropdown-item">5. Tanuló</div>
-                                <div class="dropdown-item">6. Tanuló</div>
-                                <div class="dropdown-item">7. Tanuló</div>
-                                <div class="dropdown-item">8. Tanuló</div>
+                                <div class="dropdown-item"><strong>Előkészítő osztály</strong></div>
+                                <div class="dropdown-item">Bocz Zalán</div>
+                                <div class="dropdown-item">Demeter Andor</div>
+                                <div class="dropdown-item"><strong>I.osztály</strong></div>
+                                <div class="dropdown-item">Barabás Kristóf-Szilamér</div>
+                                <div class="dropdown-item">Benedek Kristóf</div>
+                                <div class="dropdown-item">Kaló Dávid</div>
+                                <div class="dropdown-item">Kolumbán Géza-Zoltán</div>
+                                <div class="dropdown-item">Kovács Patrik-Levente</div>
+                                <div class="dropdown-item">Nagy Blanka-Orsolya</div>
                             </div>
                         </div>
                     </div>
@@ -484,15 +488,17 @@
                                 <span class="dropdown-arrow">▼</span>
                             </div>
                             <div class="dropdown-content">
-                                <div class="dropdown-item">1. Tanuló</div>
-                                <div class="dropdown-item">2. Tanuló</div>
-                                <div class="dropdown-item">3. Tanuló</div>
-                                <div class="dropdown-item">4. Tanuló</div>
-                                <div class="dropdown-item">5. Tanuló</div>
-                                <div class="dropdown-item">6. Tanuló</div>
-                                <div class="dropdown-item">7. Tanuló</div>
-                                <div class="dropdown-item">8. Tanuló</div>
-                                <div class="dropdown-item">9. Tanuló</div>
+                                <div class="dropdown-item"><strong>II.osztály</strong></div>
+                                <div class="dropdown-item">Bocz Eszter</div>
+                                <div class="dropdown-item">Constantin Tímea-Helga</div>
+                                <div class="dropdown-item">Csíki Sándor</div>
+                                <div class="dropdown-item">Csinta Zselyke</div>
+                                <div class="dropdown-item">Pál Zsófia</div>
+                                <div class="dropdown-item">Részegh Éva-Gabriella</div>
+                                <div class="dropdown-item"><strong>III.osztály</strong></div>
+                                <div class="dropdown-item">Egyed András-Gyula</div>
+                                <div class="dropdown-item">Kolumbán Csenge-Emese</div>
+                                <div class="dropdown-item">Lázár Imre-István</div>
                             </div>
                         </div>
                     </div>
@@ -505,7 +511,7 @@
                     <span class="class-icon">📚</span>
                     <h3>IV. osztály</h3>
                     <div class="class-info">
-                        <p><strong>Életkor:</strong> 9-10 év</p>
+                        <p><strong>Életkor:</strong> 10 év</p>
                         <p><strong>Tanulók száma:</strong> 12</p>
                         <p><strong>Tanítónő:</strong> Kovács Ilona-Éva </p>
                         
@@ -515,18 +521,19 @@
                                 <span class="dropdown-arrow">▼</span>
                             </div>
                             <div class="dropdown-content">
-                                <div class="dropdown-item">1. Tanuló</div>
-                                <div class="dropdown-item">2. Tanuló</div>
-                                <div class="dropdown-item">3. Tanuló</div>
-                                <div class="dropdown-item">4. Tanuló</div>
-                                <div class="dropdown-item">5. Tanuló</div>
-                                <div class="dropdown-item">6. Tanuló</div>
-                                <div class="dropdown-item">7. Tanuló</div>
-                                <div class="dropdown-item">8. Tanuló</div>
-                                <div class="dropdown-item">9. Tanuló</div>
-                                <div class="dropdown-item">10. Tanuló</div>
-                                <div class="dropdown-item">11. Tanuló</div>
-                                <div class="dropdown-item">12. Tanuló</div>
+                                <div class="dropdown-item"><strong>IV.osztály</strong></div>
+                                <div class="dropdown-item">Ágoston Ervin</div>
+                                <div class="dropdown-item">Ágoston Zsanett</div>
+                                <div class="dropdown-item">Bedő Gabriella</div>
+                                <div class="dropdown-item">Bögözi Imre-Tamás</div>
+                                <div class="dropdown-item">Breahnă Bence</div>
+                                <div class="dropdown-item">Lőrincz Dóra-Barbara</div>
+                                <div class="dropdown-item">Máthé Albert-Richárd</div>
+                                <div class="dropdown-item">Nagy Dávid</div>
+                                <div class="dropdown-item">Nagy Hanga</div>
+                                <div class="dropdown-item">Nagy Ingrid</div>
+                                <div class="dropdown-item">Sándor Kinga-Clementina</div>
+                                <div class="dropdown-item">Szilágyi Máté</div>
                             </div>
                         </div>
                     </div>
