--- a/dokumentumok.html
+++ b/dokumentumok.html
@@ -771,8 +771,7 @@
                 <div class="quick-info">
                     <div class="info-card">
                         <h4>📧 Email</h4>
-                        <p>titkarsag@iskolank.hu</p>
-                        <p>igazgato@iskolank.hu</p>
+                        <p>kopeciiskola@gmail.com</p>
                     </div>
                     <div class="info-card">
                         <h4>📍 Cím</h4>
