--- a/dokumentumok.html
+++ b/dokumentumok.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dokumentumok - Iskolánk</title>
+    <title>Dokumentumok - Köpeci iskola és óvoda</title>
     <style>
         * {
             margin: 0;
@@ -613,7 +613,7 @@
         <div class="container">
             <div class="header-content">
                 <div>
-                    <a href="index.html" class="logo">Iskolánk</a>
+                    <a href="index.html" class="logo">Köpeci iskola és óvoda</a>
                     <div class="tagline">Szeretettel és tisztelettel tanulni</div>
                 </div>
             </div>
