--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iskolánk - Szeretettel tanulni</title>
+    <title>Köpeci iskola és óvoda</title>
     <style>
         * {
             margin: 0;
@@ -187,7 +187,7 @@
         <div class="container">
             <div class="header-content">
                 <div>
-                    <a href="index.html" class="logo">Iskolánk</a>
+                    <a href="index.html" class="logo">Köpeci iskola és óvoda</a>
                     <div class="tagline">Szeretettel és tisztelettel tanulni</div>
                 </div>
             </div>
@@ -230,6 +230,10 @@
                     </div>
                     <div class="info-card">
                         <h3>👩‍🏫 4+4 Pedagógus</h3>
+                        <p><strong>• Rancz Ildikó </strong></p>
+                        <p><strong>• Kiss Tünde-Ibolya </strong></p>
+                        <p><strong>• Nagy Adél</strong></p>
+                        <p><strong>• Kovács Ilona-Éva </strong></p>
                         <p><strong>• Bardocz Szilárd-Zsolt </strong><br> Testnevelés szakos tanár</p>
                         <p><strong>• Hadnagy Béla </strong><br> Angol nyelv szakos tanár</p>
                         <p><strong>• Micle-Csog Karola-Éva </strong><br> Vallás szakos tanár</p>
