--- a/tortenet.html
+++ b/tortenet.html
@@ -200,7 +200,7 @@
         <div class="container">
             <div class="header-content">
                 <div>
-                    <a href="index.html" class="logo">Iskolánk</a>
+                    <a href="index.html" class="logo">Köpeci iskola és óvoda</a>
                     <div class="tagline">Szeretettel és tisztelettel tanulni</div>
                 </div>
             </div>
